--- a/templates/lab_app/home.html
+++ b/templates/lab_app/home.html
@@ -284,6 +284,33 @@ h3 {
   </div>
 </div>
 
+<!-- Ex student Section -->
+<div class="teachers-section my-5">
+  <h2 class="text-center mb-4">Ex-Student</h2>
+  <div class="d-flex flex-wrap justify-content-center">
+    {% for profile in ex_student_profiles %}
+      <div class="card m-2 shadow" style="width: 18rem; border-radius: 8px; overflow: hidden;">
+        <img src="{{ profile.profile_photo.url }}" alt="Profile Photo" class="card-img-top" style="height: 300px; object-fit: cover;">
+        <div class="card-body">
+          <h5 class="card-title" style="font-size: 16px; font-weight: bold; color: #333;">
+            {{ profile.name }}
+          </h5>
+          <p class="card-text" style="font-size: 16px; color: #333;">
+            <strong></strong> {{ profile.position }}<br>
+            <strong>Department: </strong> {{ profile.department }}<br>
+            <strong>University: </strong> {{ profile.affiliation }}
+          </p>
+          <a href="{% url 'lab_app:people_profile_detail' profile.id %}" class="btn btn-sm btn-primary" style="background-color: #6c63ff; border-color: #6c63ff;text-align: center; align-items: center; margin-left: 70px;">
+            Profile Details
+          </a>
+        </div>
+      </div>
+    {% empty %}
+      <p>No Ex-Student found in this category.</p>
+    {% endfor %}
+  </div>
+</div>
+
 <!-- Carousel -->
 <h2 class='text-center'>Our Lab</h2>
 <div id="demo" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
