home page image responsive

--- a/templates/lab_app/home.html
+++ b/templates/lab_app/home.html
@@ -137,6 +137,16 @@ h3 {
   border-color: #5848c2;
 }
 
+@media only screen and (max-width: 768px) {
+  img{
+    width: 100%;
+    height: auto;
+  }
+  .setCenter{
+    margin-left: 120px;
+  }
+}
+
 </style>
 
 <!-- Hero Section -->
@@ -211,7 +221,7 @@ h3 {
       
   
       <!-- Right Section: Quick Links -->
-      <div class="col-lg-4">
+      <div class="col-lg-4 setCenter">
         <div class="quick-links card">
           <div class="card-header bg-teal text-white">
             <strong>Quick Links</strong>
