add margin bottom in image

--- a/templates/lab_app/home.html
+++ b/templates/lab_app/home.html
@@ -141,9 +141,10 @@ h3 {
   img{
     width: 100%;
     height: auto;
+    margin-bottom: 20px;
   }
   .setCenter{
-    margin-left: 120px;
+    margin-left: 100px;
   }
 }
 
@@ -182,7 +183,7 @@ h3 {
       <!-- Image Column -->
       <div class="col-md-4">
         <div class="image-container">
-          <img src="{% static 'images/just.jpg' %}" alt="Not Found" class="img-fluid" />
+          <img src="{% static 'images/just.jpg' %}" alt="Not Found" class="img-fluid rounded" />
         </div>
       </div>
     </div>
@@ -198,7 +199,7 @@ h3 {
         </h2>
         <div class="row align-items-center">
           <div class="col-md-4">
-            <img src="{% static 'images/Nazmul Sir1.jpg' %}" alt="Head" class="img-fluid rounded shadow" />
+            <img src="{% static 'images/Nazmul Sir1.jpg' %}" alt="Head" class="img-fluid rounded" />
           </div>
           <div class="col-md-8">
             <h4>Prof. Dr. Md. Nazmul Hasan</h4>
