--- a/templates/lab_app/home.html
+++ b/templates/lab_app/home.html
@@ -137,8 +137,8 @@ h3 {
   border-color: #5848c2;
 }
 
-#read-more{
-  margin-bottom: 10px;
+.head-message-section{
+  margin-top: 30px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -153,6 +153,9 @@ h3 {
   #read-more{
   margin-bottom: 10px;
 }
+.head-message-section{
+  margin-top: 10px;
+}
 }
 
 @media only screen and (max-width: 480px) {
@@ -161,9 +164,9 @@ h3 {
     height: auto;
     margin-bottom: 20px;
   }
-  .setCenter{
-    margin-left: 20px;
-  }
+  .head-message-section{
+  margin-top: 10px;
+}
 }
 
 </style>
@@ -208,7 +211,7 @@ h3 {
   </div>
 
 
-  <div class="container mt-5">
+  <div class="container head-message-section">
     <div class="row">
       <!-- Left Section: Message from Head -->
       <div class="col-lg-8">
