add category field into signup form and fix some error and some chagnes in base,nav and footer page

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,12 +65,12 @@
     <div class="row align-items-center">
         <!-- Logo Section -->
         <div class="col-auto">
-            <img class="me-3" src="{% static 'images/JUST_logo.jpg' %}" alt="JUST Logo" style="width:55px; height:50px;">
+            <img class="" src="{% static 'images/labLogo.jpg' %}" alt="JUST Logo" style="width:55px; height:50px;">
         </div>
 
         <!-- Text Section -->
         <div class="col">
-            <p class="department-title mb-1">Genetic Engineering and Biotechnology</p>
+            <p class="department-title mb-1">Laboratory of Pharmaceutical Biotechnology <br> and Bioinformatics</p>
             <p class="university-name mb-0">যশোর বিজ্ঞান ও প্রযুক্তি বিশ্ববিদ্যালয়</p>
         </div>
     </div>
