--- a/templates/footer.html
+++ b/templates/footer.html
@@ -12,7 +12,7 @@
           <div class="row mt-3">
             <!-- Grid column -->
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-              <img class="img-fluid rounded pb-4" src="{% static 'images/images.jfif' %}" alt="logo" srcset="" width="100px" height="100px">
+              <img class="mb-2 ms-2" src="{% static 'images/labLogo.jpg' %}" alt="JUST Logo" style="width:120px; height:95px;">
               <!-- Content -->
               <h6 class="text-uppercase fw-bold footer-company-name pb-2" style="color: #8576FF;">Research Lab</h6>
               <p>
@@ -60,7 +60,7 @@
               <h6 class="text-uppercase fw-bold mb-4 footer-heading" style="color: #8576FF;">Hotline</h6>
               <p><i class="fas fa-envelope mr-3" style="margin-right: 13px;"></i> <a href="#"
                   class="footer-link">info.researchlab@gmail.com</a></p>
-              <p><i class="fas fa-phone mr-3" style="margin-right: 13px;"></i> <a href="#" class="footer-link">+880 9645900119</a></p>
+              <p><i class="fas fa-phone mr-3" style="margin-right: 13px;"></i> <a href="#" class="footer-link">+880 01........</a></p>
             </div>
             <!-- Grid column -->
 
