--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,10 @@
+{% load static %}
 <header>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="{% url 'lab_app:home_page_view' %}">
-                <span style="color: #0b3583;">Research</span><span style="color: #18EF74;">Lab</span>
+                <img class="" src="{% static 'images/JUST_logo.jpg' %}" alt="JUST Logo" style="width:55px; height:50px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
