--- a/templates/lab_app/dashboard.html
+++ b/templates/lab_app/dashboard.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="col-md-4">
-            <div class="card text-center text-white bg-info mb-3 shadow-sm">
+            <div class="card text-center text-white bg-success-subtle mb-3 shadow-sm">
                 <div class="card-body">
                     <h5 class="card-title text-white">Contact Info</h5>
                     <p class="card-text">show contact info.</p>
