--- a/templates/lab_app/people_list.html
+++ b/templates/lab_app/people_list.html
@@ -6,19 +6,19 @@
     <h1 class="text-center mb-4">All Researchers</h1>
     <div class="row">
         {% for profile in profiles %}
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="col-md-4 mb-4">
                 <div class="card shadow-lg h-100">
                     <div class="card-img-top-wrapper">
                         {% if profile.profile_photo %}
                             <img src="{{ profile.profile_photo.url }}" 
                                  class="card-img-top img-fluid" 
                                  alt="{{ profile.name }}" 
-                                 style="object-fit: cover; height: 500px; width: 100%;">
+                                 style="object-fit: cover; height: 350px; width: 100%;">
                         {% else %}
                             <img src="{% static 'default-profile.png' %}" 
                                  class="card-img-top img-fluid" 
                                  alt="Default profile picture" 
-                                 style="object-fit: cover; height: 200px; width: 100%;">
+                                 style="object-fit: cover; height: 300px; width: 100%;">
                         {% endif %}
                     </div>
                     <div class="card-body d-flex flex-column">
@@ -31,6 +31,9 @@
                     </div>
                 </div>
             </div>
+            {% if forloop.counter|divisibleby:3 %}
+                </div><div class="row">
+            {% endif %}
         {% endfor %}
     </div>
 </div>
