--- a/templates/lab_app/add_publication.html
+++ b/templates/lab_app/add_publication.html
@@ -10,7 +10,7 @@
                     <h4>Add Publication</h4>
                 </div>
                 <div class="card-body">
-                    <form method="post">
+                    <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         {{ form.as_p }}
                         <button type="submit" class="btn btn-primary btn-block mt-3">Add Publication</button>
